# mini_calling_service

./: README.md
mini_calling_service/: main.py  pyproject.toml
mini_calling_service/src/: agent.py  session.py
mini_calling_service/src/TTS/: local_tts.py
mini_calling_service/src/Tools/: calendar_test.py
